--- a/src/app/components/matches/matches-form/matches-form.component.html
+++ b/src/app/components/matches/matches-form/matches-form.component.html
@@ -1,5 +1,20 @@
 <div class="formWrapper">
   <mat-card-title>Add Match</mat-card-title>
+
+  <button
+    type="button"
+    class="addSetBtn"
+    mat-icon-button
+    (click)="addSetPoints()"
+  >
+    <mat-icon>add_circle_outline</mat-icon>
+    <span>Add Set</span>
+  </button>
+
+  <mat-error class="exceededMaximumSets" *ngIf="exceededMaximumSets"
+    >Minimum number of sets is 3.</mat-error
+  >
+
   <form [formGroup]="matchForm" (ngSubmit)="onSubmit()" novalidate>
     <!--PLAYER 1-->
     <div class="playerWrapper">
@@ -14,69 +29,27 @@
             {{ player.name }}
           </mat-option>
         </mat-select>
-        <mat-icon *ngIf="f.player1Name.valid" matSuffix
-          >sentiment_very_satisfied</mat-icon
-        >
-        <mat-icon
-          *ngIf="f.player1Name.touched && f.player1Name.errors"
-          matSuffix
-          >sentiment_dissatisfied</mat-icon
-        >
         <mat-error *ngIf="f.player1Name.touched && f.player1Name.errors"
           >This field is required.</mat-error
         >
       </mat-form-field>
 
-      <!--SET 1 POINTS-->
-      <mat-form-field
-        class="pointInput"
-        appearance="outline"
-        floatLabel="always"
-      >
-        <mat-label>1</mat-label>
-        <input matInput formControlName="p1s1" type="number" required />
-        <mat-error *ngIf="f.p1s1.touched && f.p1s1.errors"></mat-error>
-      </mat-form-field>
-      <!--SET 2 POINTS-->
-      <mat-form-field
-        class="pointInput"
-        appearance="outline"
-        floatLabel="always"
-      >
-        <mat-label>2</mat-label>
-        <input matInput formControlName="p1s2" type="number" required />
-        <mat-error *ngIf="f.p1s2.touched && f.p1s2.errors"></mat-error>
-      </mat-form-field>
-      <!--SET 3 POINTS-->
-      <mat-form-field
-        class="pointInput"
-        appearance="outline"
-        floatLabel="always"
-      >
-        <mat-label>3</mat-label>
-        <input matInput formControlName="p1s3" type="number" required />
-        <mat-error *ngIf="f.p1s3.touched && f.p1s3.errors"></mat-error>
-      </mat-form-field>
-      <!--SET 4 POINTS-->
-      <mat-form-field
-        class="pointInput"
-        appearance="outline"
-        floatLabel="always"
-      >
-        <mat-label>4</mat-label>
-        <input matInput formControlName="p1s4" type="number" required />
-        <mat-error *ngIf="f.p1s4.touched && f.p1s4.errors"></mat-error>
-      </mat-form-field>
-      <!--SET 5 POINTS-->
-      <mat-form-field
-        class="pointInput"
-        appearance="outline"
-        floatLabel="always"
-      >
-        <mat-label>5</mat-label>
-        <input matInput formControlName="p1s5" type="number" required />
-        <mat-error *ngIf="f.p1s5.touched && f.p1s5.errors"></mat-error>
-      </mat-form-field>
+      <!--PLAYER 1 POINTS-->
+      <div class="sets" formArrayName="points1">
+        <div *ngFor="let point of points1.controls; let i = index" [formGroupName]="i">
+          <mat-form-field
+            class="pointInput"
+            appearance="outline"
+            floatLabel="always"
+          >
+            <mat-label>{{ i + 1 }}</mat-label>
+            <input matInput formControlName="set" type="number" required />
+            <mat-error
+              *ngIf="f.points1.touched && f.points1.errors"
+            ></mat-error>
+          </mat-form-field>
+        </div>
+      </div>
     </div>
 
     <!--PLAYER 2-->
@@ -92,69 +65,27 @@
             {{ player.name }}
           </mat-option>
         </mat-select>
-        <mat-icon *ngIf="f.player2Name.valid" matSuffix
-          >sentiment_very_satisfied</mat-icon
-        >
-        <mat-icon
-          *ngIf="f.player2Name.touched && f.player2Name.errors"
-          matSuffix
-          >sentiment_dissatisfied</mat-icon
-        >
         <mat-error *ngIf="f.player2Name.touched && f.player2Name.errors"
           >This field is required.</mat-error
         >
       </mat-form-field>
 
-      <!--SET 1 POINTS-->
-      <mat-form-field
-        class="pointInput"
-        appearance="outline"
-        floatLabel="always"
-      >
-        <mat-label>1</mat-label>
-        <input matInput formControlName="p2s1" type="number" required />
-        <mat-error *ngIf="f.p2s1.touched && f.p2s1.errors"></mat-error>
-      </mat-form-field>
-      <!--SET 2 POINTS-->
-      <mat-form-field
-        class="pointInput"
-        appearance="outline"
-        floatLabel="always"
-      >
-        <mat-label>2</mat-label>
-        <input matInput formControlName="p2s2" type="number" required />
-        <mat-error *ngIf="f.p2s2.touched && f.p2s2.errors"></mat-error>
-      </mat-form-field>
-      <!--SET 3 POINTS-->
-      <mat-form-field
-        class="pointInput"
-        appearance="outline"
-        floatLabel="always"
-      >
-        <mat-label>3</mat-label>
-        <input matInput formControlName="p2s3" type="number" required />
-        <mat-error *ngIf="f.p2s3.touched && f.p2s3.errors"></mat-error>
-      </mat-form-field>
-      <!--SET 4 POINTS-->
-      <mat-form-field
-        class="pointInput"
-        appearance="outline"
-        floatLabel="always"
-      >
-        <mat-label>4</mat-label>
-        <input matInput formControlName="p2s4" type="number" required />
-        <mat-error *ngIf="f.p2s4.touched && f.p2s4.errors"></mat-error>
-      </mat-form-field>
-      <!--SET 5 POINTS-->
-      <mat-form-field
-        class="pointInput"
-        appearance="outline"
-        floatLabel="always"
-      >
-        <mat-label>5</mat-label>
-        <input matInput formControlName="p2s5" type="number" required />
-        <mat-error *ngIf="f.p2s5.touched && f.p2s5.errors"></mat-error>
-      </mat-form-field>
+      <!--PLAYER 2 POINTS-->
+      <div class="sets" formArrayName="points2">
+        <div *ngFor="let point of points2.controls; let i = index" [formGroupName]="i">
+          <mat-form-field
+            class="pointInput"
+            appearance="outline"
+            floatLabel="always"
+          >
+            <mat-label>{{ i + 1 }}</mat-label>
+            <input matInput formControlName="set" type="number" required />
+            <mat-error
+              *ngIf="f.points2.touched && f.points2.errors"
+            ></mat-error>
+          </mat-form-field>
+        </div>
+      </div>
     </div>
 
     <button
