--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -2,6 +2,7 @@
   <mat-toolbar color="primary">
     <mat-toolbar-row>
       <a routerLink="/">Matchy</a>
+      <mat-icon>sports_tennis</mat-icon>
       <span class="spacer"></span>
 
       <div class="flexContainer">
