--- a/src/app/components/players/players-list/players-list.component.html
+++ b/src/app/components/players/players-list/players-list.component.html
@@ -31,10 +31,14 @@
   <ng-container matColumnDef="actions">
     <mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
     <mat-cell *matCellDef="let player"
-      ><button (click)="showDetails(player.id)">
+      ><button type="button" (click)="showDetails(player.id)">
         <mat-icon>info</mat-icon>
-      </button></mat-cell
-    >
+      </button>
+
+      <button type="button" class="deleteBtn" (click)="deletePlayer(player.id)">
+        <mat-icon>delete</mat-icon>
+      </button>
+    </mat-cell>
   </ng-container>
 
   <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
