--- a/src/app/components/matches/matches-form/matches-form.component.html
+++ b/src/app/components/matches/matches-form/matches-form.component.html
@@ -12,7 +12,7 @@
   </button>
 
   <mat-error class="exceededMaximumSets" *ngIf="exceededMaximumSets"
-    >Minimum number of sets is 3.</mat-error
+    >Maximum number of sets is 5.</mat-error
   >
 
   <form [formGroup]="matchForm" (ngSubmit)="onSubmit()" novalidate>
