implements sort by totalSetsWon

--- a/src/app/components/players/player-card/player-card.component.html
+++ b/src/app/components/players/player-card/player-card.component.html
@@ -3,6 +3,7 @@
   <ul>
     <li>Name: {{data.player.name}}</li> 
     <li>Email: {{data.player.email}}</li>
+    <li>Total sets won: {{data.player.totalSetsWon}}</li>
   </ul>
 </mat-dialog-content>
 <mat-dialog-actions>
